<resources>
    <string name="app_name">DIceRoller</string>
    <string name="action_settings">Settings</string>
    <string name="roll_the_dice">Roll the dice</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="enter_your_guess_in_the_field_below">Enter your guess in the field below</string>
    <string name="score">Score:</string>
    <string name="roll_result">Roll result</string>
    <string name="i_am_feeling_lucky">I am feeling lucky</string>
    <string name="d_icebreaker">D-ICEBREAKER</string>
    <string name="add_new_d_icebreaker">Add new D-Icebreaker</string>
</resources>
