<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/rndNumDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/congratsDisplay"
        android:layout_width="179dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:hint="@string/enter_your_guess_in_the_field_below"
        app:layout_constraintBottom_toTopOf="@+id/rndNumDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/Rolld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_result"
        app:layout_constraintBottom_toTopOf="@+id/userInput"
        app:layout_constraintEnd_toStartOf="@+id/rndNumDisplay"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score"
        app:layout_constraintVertical_bias="0.781" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:onClick="onButtonBreaker"
        android:text="@string/d_icebreaker"
        app:layout_constraintBottom_toTopOf="@+id/die_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput"
        app:layout_constraintVertical_bias="0.351" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/die_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rndNumDisplay"
        app:layout_constraintVertical_bias="0.089"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/die_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:onClick="on_button"
        android:text="@string/i_am_feeling_lucky"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rndNumDisplay"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/rndNumDisplay"
        app:layout_constraintEnd_toStartOf="@+id/pointCounter"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsDisplay" />

    <TextView
        android:id="@+id/pointCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rndNumDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsDisplay" />

    <TextView
        android:id="@+id/questionDisplay"
        android:layout_width="309dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toTopOf="@+id/congratsDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonSettings"
        android:text="@string/add_new_d_icebreaker"
        app:layout_constraintBottom_toTopOf="@+id/questionDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

</androidx.constraintlayout.widget.ConstraintLayout>